google maps integration

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
   <link
     href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons'
     rel='stylesheet' type='text/css'>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzHOARWo964BFK7yx81T8X1G_L_lQ-jgI"></script>
 
 </head>
 
